chore(backend): rm apache commons dependencies